update main page branding

--- a/public/index.html
+++ b/public/index.html
@@ -3,53 +3,51 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3531ff" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#BA4B2B" />
     <meta name="msapplication-TileColor" content="#2b5797" />
     <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
-      content="State channels are a scalability technology for ethereum enabling instant & free peer-to-peer ethereum transactions"
+      content="Magmo | Bringing scalability to the decentralized web"
     />
 
     <meta
       property="og:description"
-      content="State channels are a scalability technology for ethereum enabling instant & free peer-to-peer ethereum transactions"
+      content="Magmo | Bringing scalability to the decentralized web"
     />
     <meta
       property="og:site_name"
-      content="State Channels - Instant P2P Ethereum Transactions"
+      content="Magmo"
     />
     <meta
       property="og:title"
-      content="State Channels - Instant P2P Ethereum Transactions"
+      content="Magmo"
     />
-    <meta property="og:url" content="https://statechannels.org/" />
+    <meta property="og:url" content="https://magmo.com/" />
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://statechannels.org/assets/symbol.png"
+      content="https://magmo.com/assets/symbol.png"
     />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="400" />
 
     <meta
       name="twitter:title"
-      content="State Channels - Instant P2P Ethereum Transactions"
+      content="Magmo | Bringing scalability to the decentralized web"
     />
     <meta
       name="twitter:description"
-      content="State channels are a scalability technology for ethereum enabling instant & free peer-to-peer ethereum transactions"
+      content="Magmo | Bringing scalability to the decentralized web"
     />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:url" content="https://statechannels.org/" />
+    <meta name="twitter:url" content="https://magmo.com/" />
     <meta
       name="twitter:image"
-      content="https://statechannels.org/assets/symbol.png"
+      content="https://magmo.com/assets/symbol.png"
     />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -68,7 +66,7 @@
     </script>
 
     <link rel="stylesheet" href="/app.css" />
-    <title>State Channels - Instant P2P Ethereum Transactions</title>
+    <title>Magmo | Bringing scalability to the decentralized web</title>
   </head>
   <body>
     <div class="wrapper">
@@ -103,7 +101,7 @@
               <a
                 class="nav__right__item"
                 target="_blank"
-                href="https://github.com/statechannels"
+                href="https://github.com/magmo"
                 >github.</a
               >
               <a
@@ -203,16 +201,18 @@
                 id="Capa_1"
                 data-name="Capa 1"
                 xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 313.59 313.59"
+                viewBox="0 0 58.38 58.38"
               >
                 <title>iso</title>
                 <path
-                  d="M27.6372635,59.3586667 C26.5446802,55.1268532 32.5739445,48.9471148 34.2546516,45.4095952 C23.9082985,55.6637817 14.7272084,51.0577828 7.17304815,61.3860096 C9.4570503,41.3559365 14.261503,39.0018833 17.6606445,30.0046896 C14.5131836,33.3025412 10.8525391,35.576467 4,35.0803732 C10.8261719,30.810842 14.1669922,17.4084982 18.1245087,13.3327391 C18.1314945,13.3255446 18.1384931,13.3183722 18.1455045,13.311222 L18.137565,13.3034174 C23.3703938,5.74429989 32.7472179,1.57675203 42.3502065,3.44338393 C55.3015822,5.96087634 63.7599158,18.5008716 61.2424234,31.4522472 C60.0273962,37.7030202 56.4777725,42.9072042 51.6740593,46.3359881 C39.7725838,55.281575 33.1844456,50.3344779 27.6372635,59.3586667 Z M35.5985086,37.7334732 C38.8572603,37.3012884 43.7878723,34.9616293 45.7158688,32.3909133 C46.483053,31.2978287 47.0380124,30.0293771 47.309294,28.633754 C48.3421114,23.3203691 44.8720258,18.1757557 39.558641,17.1429383 C35.9961009,16.4504507 32.5094319,17.7822382 30.2795105,20.3517355 C26.3014526,25.2902731 30.381648,30.5014347 24.9830322,39.7246762 C30.7576482,39.6978304 36.466062,33.8509684 38.9569627,31.5120763 C38.8319356,32.4788015 37.8431934,35.7972288 35.5985086,37.7334732 Z"
-                  fill="#BA4B2B"
+                d="M51.0901233,45.7000132 C39.1895759,54.6465143 32.6014377,49.6994172 27.0542557,58.723606 C25.9616724,54.4917925 31.9909367,48.3120541 33.6716438,44.7745345 C23.3252907,55.028721 14.1442006,50.4227221 6.59004034,60.7509489 C8.87404249,40.7208757 13.6784952,38.3668225 17.0776367,29.3696289 C13.9301758,32.6674805 10.2695312,34.9414062 3.41699219,34.4453125 C10.2431641,30.1757812 13.5839844,16.7734375 17.5415009,12.6976784 C17.5484867,12.6904839 17.5554853,12.6833115 17.5624967,12.6761613 L17.5545572,12.6683567 C22.787386,5.10923918 32.1642101,0.941691323 41.7671987,2.80832323 C54.7185744,5.32581563 63.1769079,17.8658109 60.6594155,30.8171865 C59.4443884,37.0679594 55.8947647,42.2721435 51.0910514,45.7009274 L51.0901233,45.7000132 Z M35.0155008,37.0984125 C38.2742525,36.6662277 43.2048645,34.3265686 45.1328609,31.7558526 C45.9000452,30.662768 46.4550046,29.3943164 46.7262862,27.9986933 C47.7591036,22.6853084 44.289018,17.540695 38.9756332,16.5078776 C35.4130931,15.81539 31.9264241,17.1471775 29.6965027,19.7166748 C25.7184448,24.6552124 29.7986402,29.866374 24.4000244,39.0896155 C30.1746404,39.0627697 35.8830542,33.2159077 38.3739549,30.8770156 C38.2489277,31.8437408 37.2601856,35.1621681 35.0155008,37.0984125 Z" 
+                id="Combined-Shape"
+                fill="#BA4B2B"
+                transform="translate(-4 -2)"
                 />
               </svg>
               <p class="footer__left__text">
-                Copyright © 2020 State Channels contributors
+                Copyright © 2020 Magmo Team
               </p>
             </div>
 
