--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -136,7 +136,7 @@
             <h2 class="hero__heading">Current Projects</h2>
 
             <p class="hero__body">
-              Main contributors to State Channels, an open source project in pursuit of a single standard that enable a
+              Main contributors to State Channels, an open source project in pursuit of a single standard that enables a
               fully interoperable ecosystem of State Channel applications. Learn more at <a target="_blank"
                 href="https://www.statechannels.org/">statechannels.org</a>!
             </p>
