links around mugshots point to GH

--- a/public/team/index.html
+++ b/public/team/index.html
@@ -102,7 +102,7 @@
               <div class="team-content__item__logos">
 
                 <div class="team-content__item__logos__item">
-                  <a>
+                  <a href='https://github.com/tomclose'>
                     <img src="../assets/people/tom.png"></img>
                   </a>
                   <ul class="member-list">
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="team-content__item__logos__item">
-                  <a>
+                  <a href='https://github.com/andrewgordstewart'>
                     <img src="../assets/people/andrew.png"></img>
                   </a>
                   <ul class="member-list">
@@ -120,7 +120,7 @@
                 </div>
 
                 <div class="team-content__item__logos__item">
-                  <a>
+                  <a href='https://github.com/geoknee'>
                     <img src="../assets/people/george.png"></img>
                   </a>
                   <ul class="member-list">
@@ -129,7 +129,7 @@
                 </div>
 
                 <div class="team-content__item__logos__item">
-                  <a>
+                  <a href='https://github.com/snario'>
                     <img src="../assets/people/liam.png"></img>
                   </a>
                   <ul class="member-list">
@@ -138,7 +138,7 @@
                 </div>
 
                 <div class="team-content__item__logos__item">
-                  <a>
+                  <a href='https://github.com/kerzhner'>
                     <img src="../assets/people/mike.png"></img>
                   </a>
                   <ul class="member-list">
@@ -147,7 +147,7 @@
                 </div>
 
                 <div class="team-content__item__logos__item">
-                  <a>
+                  <a href='https://github.com/lalexgap'>
                     <img src="../assets/people/alex.png"></img>
                   </a>
                   <ul class="member-list">
@@ -156,7 +156,7 @@
                 </div>
 
                 <div class="team-content__item__logos__item">
-                  <a>
+                  <a href='https://github.com/NiloCK'>
                     <img src="../assets/people/colin.png"></img>
                   </a>
                   <ul class="member-list">
