--- a/public/about_us/index.html
+++ b/public/about_us/index.html
@@ -181,7 +181,7 @@
                 </div>
 
                 <div class="team-content__item__logos__item">
-                  <a href="https://github.com/lalexgap">
+                  <a href="https://alexgap.dev">
                     <img src="../assets/people/alex.png"></img>
                   </a>
                   <ul class="member-list">
