add email contact option

--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,9 @@
               <li>
                 <a class="nav__dropdown__item" target="_blank" href="https://statechannels.discourse.group/">forum.</a>
               </li>
-
+              <li>
+                <a class="nav__dropdown__item" target="_blank" href="mailto:research@magmo.com">email.</a>
+              </li>
             </ul>
           </nav>
 
