fix: styling improvements
- added background watermark image to magmo.com
- added hover state for text CTAs on project page

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -138,12 +138,12 @@
             <p class="hero__body">
               Main contributors to State Channels, an open source project in pursuit of a single standard that enables a
               fully interoperable ecosystem of State Channel applications. Learn more at <a target="_blank"
-                href="https://www.statechannels.org/">statechannels.org</a>!
+              class="hero__cta" href="https://www.statechannels.org/">statechannels.org</a>!
             </p>
             <p class="hero__body">
               With support from Filecoin Grants, we are developing Nitro protocol in golang for use in the Filecoin
               ecosystem. This work lays the foundation of utilizing virtual channels in the Retrieval Market. Check out
-              our <a href="https://github.com/filecoin-project/devgrants/issues/348">grant proposal</a>.
+              our <a class="hero__cta" href="https://github.com/filecoin-project/devgrants/issues/348">grant proposal</a>.
             </p>
             <p class="hero__body">
               [TBD] SAFE placeholder and Nitro V2
@@ -164,15 +164,15 @@
               </p>
               <ul>
                   <li class="hero__body__list">
-                    <a target="_blank" href="https://rps.magmo.com/">Rock Paper Scissors</a>
+                    <a class="hero__cta" target="_blank" href="https://rps.magmo.com/">Rock Paper Scissors</a>
                   </li>
                   <li class="hero__body__list">
-                    <a target="_blank" href="https://ttt.magmo.com/">Tic Tac Toe</a>
+                    <a class="hero__cta" target="_blank" href="https://ttt.magmo.com/">Tic Tac Toe</a>
                   </li>
               </ul>
               <p class="hero__body">
-                For a more practical application to showcase the value of state channels, we built <a target="_blank"
-                  href="https://web3torrent.statechannels.org/">Web3Torrent</a> proof of concept application.
+                For a more practical application to showcase the value of state channels, we built <a target="_blank" 
+                class="hero__cta" href="https://web3torrent.statechannels.org/">Web3Torrent</a> proof of concept application.
                 This browser based torrenting client demonstates the use of peer to peer state channel relationships,
                 high frequency messaging and the ability to incentivize filesharing using micropayments
               </p>
@@ -182,13 +182,13 @@
               </p>
               <br>
               <p class="hero__subheading__right">
-                Check out our <a target="_blank" href="https://github.com/magmo">github</a> repository!
+                Check out our <a target="_blank" class="hero__cta" href="https://github.com/magmo">github</a> repository!
                 <br>
                 Let us know what you're building through our <a target="_blank"
-                  href="https://statechannels.discourse.group/">discourse forum</a>!
+                class="hero__cta" href="https://statechannels.discourse.group/">discourse forum</a>!
                 <br>
                 Or drop by our <a target="_blank"
-                  href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A">slack
+                class="hero__cta" href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A">slack
                   community</a>!
               </p>
           </div>
