feat: project page update with SAFE and SC apps
- Added SAFE description

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -146,7 +146,11 @@
               our <a class="hero__cta" href="https://github.com/filecoin-project/devgrants/issues/348">grant proposal</a>.
             </p>
             <p class="hero__body">
-              [TBD] SAFE placeholder and Nitro V2
+              We will be announcing a new whitepaper soon!
+              <br>
+              We have been analyzing optimization strategies for withdrawing funds from layer 2 systems (such as an optimistic roll-up)
+               to a layer 1 system (such as Ethereum mainnet) and will be introducing the <b>Stingy Asymmetric Fast Exit (SAFE) </b> protocol. 
+               SAFE drastically reduces cost compared to existing solutions while maintaining trustlessness and security. 
             </p>
 <br>
           </div>
