feat: insert mission statement
Introduce mission statement page

--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,7 @@
           <!-- #if desktop -->
           <nav class="nav__right mobile-off">
             <a class="nav__right__item" href="/about_us">about us.</a>
+            <a class="nav__right__item" href="/mission">mission.</a>
             <li class="nav__dropdown__papers">
               <a class="nav__right__item">papers.</a>
               <ul class="nav__dropdown__papers__list">
@@ -115,6 +116,7 @@
         <div class="mobile-menu mobile-only">
           <button class="mobile-menu__close">close</button>
           <a class="mobile-menu__item" href="/about_us">about us.</a>
+          <a class="mobile-menu__item" href="/mission">mission.</a>
           <a class="mobile-menu__item" href="/papers">papers.</a>
           <a class="mobile-menu__item" href="/projects">projects.</a>
           <div class="mobile-menu__item__parent">
