--- a/public/mission/index.html
+++ b/public/mission/index.html
@@ -115,15 +115,14 @@
         <div class="mobile-menu mobile-only">
           <button class="mobile-menu__close">close</button>
           <a class="mobile-menu__item" href="/about_us">about us.</a>
-          <a class="mobile-menu__item" href="/mission">mission.</a>
+          <a class="mobile-menu__item active" href="/mission">mission.</a>
           <a class="mobile-menu__item" href="/papers">papers.</a>
-          <a class="mobile-menu__item active" href="/projects">projects.</a>
+          <a class="mobile-menu__item" href="/projects">projects.</a>
           <div class="mobile-menu__item__parent">
             contact.
           </div>
           <ul>
-            <a class="mobile-menu__item__sub" target="_blank"
-              href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A">slack.</a>
+            <a class="mobile-menu__item__sub" target="_blank" href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A">slack.</a>
             <a class="mobile-menu__item__sub" target="_blank" href="https://statechannels.discourse.group/">forum.</a>
           </ul>
         </div>
@@ -140,88 +139,14 @@
 
           <div class="current">
 
-            <h2 class="hero__heading">Current Projects</h2>
-
+            <h2 class="hero__heading">Mission</h2>
             <p class="hero__body">
-              Main contributors to State Channels, an open source project in pursuit of a single standard that enables a
-              fully interoperable ecosystem of State Channel applications. Learn more at <a target="_blank"
-                class="hero__cta" href="https://www.statechannels.org/">statechannels.org</a>!
+              Insert mission statement here
             </p>
-            <p class="hero__body">
-              With support from Filecoin Grants, we are developing Nitro protocol in golang for use in the Filecoin
-              ecosystem. This work lays the foundation of utilizing virtual channels in the Retrieval Market. Check out
-              our <a class="hero__cta" href="https://github.com/filecoin-project/devgrants/issues/348">grant
-                proposal</a>.
-            </p>
-            <p class="hero__body">
-              We will be announcing a new whitepaper soon!
-              <br>
-              We are developing the <b>Stingy Asymmetric Fast Exit (SAFE) </b> protocol, which aims to
-              drasticually reduce the cost for withdrawing funds from layer 2 systems (such as an optimistic roll-up)
-              to a layer 1 system (such as Ethereum mainnet) while maintaining trustlessness and security.
-            </p>
-            <br>
           </div>
 
         </div>
-        <div class="container">
-          <div class="past">
-            <h2 class="hero__heading">State Channel Applications</h3>
 
-              <p class="hero__body">
-                Here at Magmo, we are working towards our goal of building state channel networks, where users can
-                interact off-chain with security —
-                but with minimal cost and latency. To stress-test our protocols and other software, we build
-                applications that utilize them.
-              </p>
-              <p class="hero__body">
-                To showcase the value of state channels, we built a proof of concept:
-              </p>
-              <p class="hero__body__middle">
-                <a href="https://web3torrent.statechannels.org/" alt="Web3Torrent">
-                  <image class="app__logos" src="https://web3torrent.statechannels.org/assets/logo.svg"/>
-                </a>
-
-              </p>
-
-
-              <p class="hero__body">
-                This browser based torrenting client demonstates the use of peer to peer state channel relationships,
-                high frequency messaging and the ability to incentivize filesharing using micropayments. To learn more,
-                read the accompanying <a target="_blank" class="hero__cta"
-                  href="https://blog.statechannels.org/introducing-web3torrent/">blog post</a>.
-              </p>
-              <br>
-              <p class="hero__body">
-                We've also built other simple and fun applications based off some well known games:
-              </p>
-              <ul>
-                <li class="hero__body__list">
-                  <a class="hero__cta" target="_blank" href="https://rps.magmo.com/">Rock Paper Scissors</a>
-                </li>
-                <li class="hero__body__list">
-                  <a class="hero__cta" target="_blank" href="https://ttt.magmo.com/">Tic Tac Toe</a>
-                </li>
-              </ul>
-
-              <p class="hero__body">
-                The process of building these application, as well as feedback we get from gamers and devs, is a great
-                opportunity to learn how we could be doing things differently or better.
-              </p>
-              <br>
-              <p class="hero__subheading__right">
-                Check out our <a target="_blank" class="hero__cta"
-                  href="https://github.com/statechannels/apps">github</a> repository!
-                <br>
-                Let us know what you're building through our <a target="_blank" class="hero__cta"
-                  href="https://statechannels.discourse.group/">discourse forum</a>!
-                <br>
-                Or drop by our <a target="_blank" class="hero__cta"
-                  href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A">slack
-                  community</a>!
-              </p>
-          </div>
-        </div>
       </div>
 
     </div>
