Update: Navbar for email and more css
- updated all index page navbars to include email
- updated css for buttons and background image on main page

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -99,7 +99,9 @@
                   <a class="nav__dropdown__item" target="_blank"
                     href="https://statechannels.discourse.group/">forum.</a>
                 </li>
-
+                <li>
+                  <a class="nav__dropdown__item" target="_blank" href="mailto:research@magmo.com">email.</a>
+                </li>
               </ul>
           </nav>
           <!-- /if desktop -->
@@ -123,6 +125,7 @@
             <a class="mobile-menu__item__sub" target="_blank"
               href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A">slack.</a>
             <a class="mobile-menu__item__sub" target="_blank" href="https://statechannels.discourse.group/">forum.</a>
+            <a class="mobile-menu__item__sub" target="_blank" href="mailto:research@magmo.com">email.</a>
           </ul>
         </div>
       </div>
