--- a/public/about_us/index.html
+++ b/public/about_us/index.html
@@ -105,6 +105,9 @@
               <li>
                 <a class="nav__dropdown__item" target="_blank" href="https://statechannels.discourse.group/">forum.</a>
               </li>
+              <li>
+                <a class="nav__dropdown__item" target="_blank" href="mailto:research@magmo.com">email.</a>
+              </li>
 
             </ul>
           </nav>
@@ -128,6 +131,7 @@
           <ul>
             <a class="mobile-menu__item__sub" target="_blank" href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A">slack.</a>
             <a class="mobile-menu__item__sub" target="_blank" href="https://statechannels.discourse.group/">forum.</a>
+            <a class="mobile-menu__item__sub" target="_blank" href="mailto:research@magmo.com">email.</a>
           </ul>
         </div>
       </div>
