--- a/public/index.html
+++ b/public/index.html
@@ -123,6 +123,7 @@
           <ul>
           <a class="mobile-menu__item__sub" target="_blank" href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A">slack.</a>
           <a class="mobile-menu__item__sub" target="_blank" href="https://statechannels.discourse.group/">forum.</a>
+          <a class="mobile-menu__item__sub" target="_blank" href="mailto:research@magmo.com">email.</a>
           </ul>
         </div>
       </div>
